# pyproject.toml
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pywgcna"
version = "0.1.0"
description = "WGCNA in python, faster."
authors = [
    { name="James Haberberger", email="jhaberbe@stanford.edu" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "scipy",
    "seaborn",
    "scikit-learn",
    "tqdm", 
    "pandas",
    "gprofiler",
    
]

[project.optional-dependencies]
dev = ["pytest", "black"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
package-dir = {"" = "src"}
